--- a/INCEPTION/index.html
+++ b/INCEPTION/index.html
@@ -7,15 +7,12 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <h1>"hello world"</h1>
+    </div>
 
-    <!-- Core React library -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  
     
-    <!-- ReactDOM library -->
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    
-    <!-- Your custom script -->
-    <script src="./script.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
